--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.2",
     "vue": "^3.2.45",
     "vue-icon": "^2.3.0",
     "vue-router": "^4.1.6"
