--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.2.2",
+    "nginx": "^1.0.8",
     "vue": "^3.2.45",
     "vue-icon": "^2.3.0",
     "vue-router": "^4.1.6"
